# codewire

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Caddyfile.fleet  Cargo.toml  Dockerfile  GPG_PUBLIC_KEY.asc  HOMEBREW_TAP_README.md  HOMEBREW_TAP_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  docker-compose.fleet.yml  docker-compose.yml  go.mod  go.sum  index.html  install.sh  nfpm.yaml
.claude/: settings.local.json
.claude/skills/: codewire-dev.md  codewire.md  install.sh
.gitea/workflows/: ci.yaml  deploy-prod.yaml  deploy.yaml
.github/workflows/: ci.yml  release.yml
Formula/: codewire.rb
aur/: PKGBUILD
charts/codewire-relay/: Chart.yaml  values.yaml
cmd/cw/: billing_cmd.go  checkout.go  cost.go  env_cmd.go  env_exec_cmd.go  env_log_ui.go  github.go  helpers.go  image_ref_test.go  main.go  platform.go  platform_helpers.go  platform_list.go  (+16 more)
coder-module/: README.md  main.tf
demo/: Dockerfile  Makefile  bashrc  showcase.sh
docs/: Dockerfile  demo.html  index.html  llm-ux-notes.md  llms-full.txt  llms.txt  mcp.md  nginx.conf  quickstart.md
operator/: Dockerfile  Makefile  go.mod  main.go
scripts/: update-homebrew-formula.sh
src/: auth.rs  client.rs  config.rs  connection.rs  daemon.rs  fleet.rs  fleet_client.rs  lib.rs  main.rs  mcp_server.rs  node.rs  protocol.rs  session.rs  status_bar.rs  terminal.rs
tests/: demo_e2e_test.sh  events_test.go  fleet.rs  fleet_test.go  integration.rs  integration_test.go  manual_test.sh  messaging_test.go  relay_agent_integration_test.go  relay_agent_test.go  relay_e2e_test.go  relay_ssh_test.go
(+137 files in other folders)
