[package]
name = "codewire"
version = "0.1.0"
edition = "2024"
description = "Persistent process server for AI coding agents"
license = "MIT"
repository = "https://github.com/codespacesh/codewire"

[lib]
name = "codewire"
path = "src/lib.rs"

[[bin]]
name = "cw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
nix = { version = "0.29", features = ["term", "signal", "process"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
